{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 61,
  "lineage": "ca8ec4ff-8224-1134-26ec-69c8aafda813",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-05-06T09:47:08.021-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-419906/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/networks/client1",
            "priority": 1000,
            "project": "terraform-gcp-419906",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/firewalls/allow-internal",
            "source_ranges": [
              "172.16.0.0/24",
              "172.16.1.0/24",
              "172.16.2.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-client.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-06T09:47:08.166-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-419906/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/networks/client1",
            "priority": 1000,
            "project": "terraform-gcp-419906",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-client.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-client.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "australia-southeast2/subnet-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-06T09:47:12.870-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-01",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "subnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/networks/client1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-419906",
            "purpose": "PRIVATE",
            "region": "australia-southeast2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.64.0/24",
                "range_name": "subnet-01-secondary-01"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-client.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "australia-southeast2/subnet-02",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-06T09:47:11.266-07:00",
            "description": "This subnet has a description",
            "gateway_address": "10.10.20.1",
            "id": "projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-02",
            "ip_cidr_range": "10.10.20.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-02",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/networks/client1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-419906",
            "purpose": "PRIVATE",
            "region": "australia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-02",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-client.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "australia-southeast2/subnet-03",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-06T09:47:12.174-07:00",
            "gateway_address": "10.10.30.1",
            "id": "projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-03",
            "ip_cidr_range": "10.10.30.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.7,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-03",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/networks/client1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-419906",
            "purpose": "PRIVATE",
            "region": "australia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-03",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-client.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-client.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-419906/global/networks/client1",
            "mtu": 0,
            "name": "client1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5324606354496993168",
            "project": "terraform-gcp-419906",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/networks/client1"
          }
        }
      ]
    },
    {
      "module": "module.vpc-server.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "australia-southeast2/subnet-04",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-06T08:18:57.666-07:00",
            "gateway_address": "10.11.10.1",
            "id": "projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-04",
            "ip_cidr_range": "10.11.10.0/24",
            "name": "subnet-04",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/networks/server1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-419906",
            "purpose": "PRIVATE",
            "region": "australia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-04",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-server.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "australia-southeast2/subnet-05",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-06T08:18:59.070-07:00",
            "description": "This subnet has a description",
            "gateway_address": "10.11.20.1",
            "id": "projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-05",
            "ip_cidr_range": "10.11.20.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-05",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/networks/server1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-419906",
            "purpose": "PRIVATE",
            "region": "australia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-05",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-server.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "australia-southeast2/subnet-06",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-06T08:18:57.175-07:00",
            "gateway_address": "10.11.30.1",
            "id": "projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-06",
            "ip_cidr_range": "10.11.30.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.7,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "subnet-06",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/networks/server1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-419906",
            "purpose": "PRIVATE",
            "region": "australia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/regions/australia-southeast2/subnetworks/subnet-06",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc-server.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-server.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-419906/global/networks/server1",
            "mtu": 0,
            "name": "server1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6437734780948007578",
            "project": "terraform-gcp-419906",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-419906/global/networks/server1"
          }
        }
      ]
    }
  ]
}